fixed issue with comment box overlapping on certain mobile display(via CSS)

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -184,4 +184,7 @@ footer a:hover {
     perspective: 1000px;
     padding: 5px;
   }
+  .comment-form {
+    display: none;
+  }
 }
